Final tweaks to sauce pool and an attempt to fix the issue where the Wing Basics link is inactive (or covered by another component) when the main page is loaded.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -75,7 +75,7 @@
   .gradient-custom-5 {
     /* fallback for old browsers */
     background: white;
-  
+    z-index: 1;
     /* Chrome 10-25, Safari 5.1-6 */
 /*     background: -webkit-linear-gradient(
       to right,
